--- a/styles/style.css
+++ b/styles/style.css
@@ -11,6 +11,10 @@ body {
   overflow-x: hidden;
 }
 
+.aboutpage .row .h5 {
+  opacity: 0.8;
+}
+
 .navbar {
   display: none;
   /* !!! CAMBIAR A NONE !!! */
